# krshi27-scribe

./: .gitignore  README.md  WORKPLAN.md  environment.yml  pyproject.toml  requirements.txt  streamlit_app.py
presets/: zine-vol1-karoshirt-voronoi.json  zine-vol1-scribe-light.json  zine-vol1-scribe-subway.json
src/karoshirt_type/: voronoi.py
src/krshi27_scribe/: __init__.py  background.py  render.py
src/krshi27_scribe/data/font/: karoshirt.xml
tests/: test_voronoi.py
