[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krshi27-scribe"
version = "0.1.0"
description = "Voronoi typography from the karoshirt font: text → 2D paths or B&W stencil image."
requires-python = ">=3.14"
dependencies = [
    "numpy",
    "pillow",
    "matplotlib",
    "scipy",
    "shapely",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
krshi27_scribe = ["data/font/*.xml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py314"]
